@@ -33,7 +33,8 @@
 
       <mat-form-field appearance="outline">
         <mat-label>{{'login.password' | translate}}</mat-label>
-        <input matInput placeholder="password" type="password" formControlName="password" required>
+        <input matInput placeholder="password" [type]="hide_password ? 'password' : 'text'" formControlName="password" required>
+	<mat-icon matSuffix (click)="hide_password = !hide_password">{{hide_password ? 'visibility_off' : 'visibility'}}</mat-icon>
         <mat-error *ngIf="registerForm.get('password').invalid">
           {{'validations.required' | translate}}
         </mat-error>
@@ -41,7 +42,8 @@
 
       <mat-form-field appearance="outline">
         <mat-label>{{'register.confirm_password' | translate}}</mat-label>
-        <input matInput type="password" formControlName="confirmPassword" required>
+        <input matInput [type]="hide_password ? 'password' : 'text'"formControlName="confirmPassword" required>
+	<mat-icon matSuffix (click)="hide_password = !hide_password">{{hide_password ? 'visibility_off' : 'visibility'}}</mat-icon>
         <mat-error *ngIf="registerForm.get('confirmPassword').hasError('required')">
           {{'validations.required' | translate}}
         </mat-error>
